Chore: Refactor to replace deprecated methods, improve immutability handling, and update version to 0.13.0